Fixed alignment

--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -101,8 +101,7 @@ body {
 }
 
 .minions .minions-item p {
-  display: inline-block;
-  margin-left: 60%;
+  margin-left: 50%;
 }
 
 .minions .minions-item .name {
@@ -114,7 +113,7 @@ body {
 
 .minions-item .type {
   font-variant-caps: all-small-caps;
-  text-align: right;
+  text-align: center;
 }
 
 .add-minion {
